argo-workflows/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: Host(`argo.infra.sprint.luchtenberg.eu`)
        kind: Rule
        services:
          - name: argo-server
            port: 2746
    tls:
      secretName: argo-infra-sprint-luchtenberg-eu-tls
